event challenge with plain js

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,7 +38,7 @@ $red: #f08280;
     margin-top: 0;
     font-size: 0.8em;
   }
-a{
+&__btn{
   padding: 10px 15px;
     background-color: black;
     color: white;
