--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,13 +38,13 @@ $red: #f08280;
     margin-top: 0;
     font-size: 0.8em;
   }
-&__btn{
-  padding: 10px 15px;
+  &__btn {
+    padding: 10px 15px;
     background-color: black;
     color: white;
     text-decoration: none;
     font-size: 0.8em;
-}
+  }
   &--redHeadline {
     h2 {
       color: $red;
@@ -66,6 +66,7 @@ $red: #f08280;
   position: relative;
   height: 150px;
   z-index: 1;
+  display: none;
   p {
     margin-left: 10vw;
     padding-top: 20px;
@@ -74,8 +75,8 @@ $red: #f08280;
     font-weight: bold;
     z-index: 2;
   }
-  &--hidden {
-    display: none;
+  &--open {
+    display: block;
   }
   &:before {
     content: "";
