--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,26 +10,32 @@ $red: #f08280;
   box-shadow: -4px 0px 0px 0px red;
 }
 
-.headline {
-  margin-left: 10vw;
-  @include redLine();
-}
-
 .mainConversion {
-  $this: &;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-left: 10vw;
-  background-color: $background-gray;
-  div {
+  
+  &__flexWrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 10vw;
+    background-color: $background-gray;
+  }
+
+  &__textWrapper {
     padding-right: 5vw;
   }
+
+  h2 {
+    margin-left: 10vw;
+    @include redLine();
+  }
+
   img {
     width: 50%;
     height: auto;
   }
-  h2 {
+
+  h3 {
+    font-size: 1.5em;
     margin-bottom: 10px;
   }
 
@@ -38,6 +44,7 @@ $red: #f08280;
     margin-top: 0;
     font-size: 0.8em;
   }
+
   &__btn {
     padding: 10px 15px;
     background-color: black;
@@ -45,8 +52,9 @@ $red: #f08280;
     text-decoration: none;
     font-size: 0.8em;
   }
+
   &--redHeadline {
-    h2 {
+    h3 {
       color: $red;
     }
   }
@@ -59,34 +67,39 @@ $red: #f08280;
       padding-right: 20px;
     }
   }
-}
 
-.contactToggleBox {
-  background-color: $background-blue;
-  position: relative;
-  height: 150px;
-  z-index: 1;
-  display: none;
-  p {
-    margin-left: 10vw;
-    padding-top: 20px;
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    z-index: 2;
-  }
-  &--open {
-    display: block;
-  }
-  &:before {
-    content: "";
-    width: 40px;
-    height: 40px;
+  &__contactToggleBox {
     background-color: $background-blue;
-    position: absolute;
-    top: 0;
-    left: 10vw;
-    transform: translateX(-50%) rotate(45deg);
-    z-index: -1;
+    position: relative;
+    height: 150px;
+    z-index: 1;
+    margin-top: 10px;
+    display: none;
+
+    p {
+      font-size: 1.2em;
+      margin-left: calc(10vw - 10px);
+      padding-top: 20px;
+      color: white;
+      font-family: Arial, Helvetica, sans-serif;
+      font-weight: bold;
+      z-index: 2;
+    }
+
+    &--open {
+      display: block;
+    }
+
+    &:before {
+      content: "";
+      width: 40px;
+      height: 40px;
+      background-color: $background-blue;
+      position: absolute;
+      top: 0;
+      left: 10vw;
+      transform: translateX(-50%) rotate(45deg);
+      z-index: -1;
+    }
   }
 }
